--- a/eAppointmentClient/src/app/components/doctors/doctors.component.html
+++ b/eAppointmentClient/src/app/components/doctors/doctors.component.html
@@ -10,7 +10,7 @@
 
 <div class="mt-3">
   <div class="form-group">
-    <div class="row gap-1">
+    <div class="row gap-1 align-items-center">
       <div class="col-xl-8 col-lg-7 col-md-5 col-sm-12 col-12">
         <button
           class="btn btn-dark"
@@ -26,6 +26,7 @@
       >
         <input
           type="search"
+          [(ngModel)]="search"
           class="form-control"
           placeholder="Search doctor..."
         />
@@ -33,6 +34,9 @@
       </div>
     </div>
   </div>
+
+  <hr class="hr" />
+
   <div class="form-group mt-1">
     <table class="table table-hover">
       <thead>
@@ -44,16 +48,26 @@
         </tr>
       </thead>
       <tbody>
-        @for(doctor of doctors; track doctor){
+        @for(doctor of doctors | doctor : search; track doctor){
         <tr>
           <td>{{ $index + 1 }}</td>
           <td>{{ doctor.fullName }}</td>
           <td>{{ doctor.department.name }}</td>
           <td>
-            <button class="btn btn-sm btn-outline-primary me-1" title="Update">
+            <button
+              (click)="get(doctor)"
+              data-bs-toggle="modal"
+              data-bs-target="#updateModal"
+              class="btn btn-sm btn-outline-primary me-1"
+              title="Update"
+            >
               <i class="fa-solid fa-edit"></i>
             </button>
-            <button class="btn btn-sm btn-outline-danger" title="Delete">
+            <button
+              class="btn btn-sm btn-outline-danger"
+              title="Delete"
+              (click)="delete(doctor.id, doctor.fullName)"
+            >
               <i class="fa-solid fa-trash"></i>
             </button>
           </td>
@@ -64,6 +78,7 @@
   </div>
 </div>
 
+<!-- Create Modal -->
 <div class="modal fade" id="addModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -115,7 +130,80 @@
             <select
               name="department"
               class="form-control"
-              [(ngModel)]="createModel.department"
+              [(ngModel)]="createModel.departmentValue"
+              required
+            >
+              <option [value]="0">Select...</option>
+              @for(department of departments; track department){
+              <option [value]="department.value">
+                {{ department.name }}
+              </option>
+              }
+            </select>
+            <div class="invalid-feedback"></div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-dark w-100">Save</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Update Modal -->
+<div class="modal fade" id="updateModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5">Update Doctor Form</h1>
+        <button
+          type="button"
+          #updateModalCloseBtn
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <form
+        #updateForm="ngForm"
+        formValidate
+        autocomplete="off"
+        (ngSubmit)="update(updateForm)"
+      >
+        <div class="modal-body mt-2">
+          <div class="form-group">
+            <label>First Name</label>
+            <input
+              type="text"
+              [(ngModel)]="updateModel.firstName"
+              name="updateFirstName"
+              class="form-control"
+              required
+              minlength="3"
+            />
+            <div class="invalid-feedback"></div>
+          </div>
+
+          <div class="form-group mt-2">
+            <label>Last Name</label>
+            <input
+              type="text"
+              [(ngModel)]="updateModel.lastName"
+              name="updateLastName"
+              class="form-control"
+              required
+              minlength="3"
+            />
+            <div class="invalid-feedback"></div>
+          </div>
+
+          <div class="form-group mt-2">
+            <label>Department</label>
+            <select
+              name="updateDepartment"
+              class="form-control"
+              [(ngModel)]="updateModel.departmentValue"
               required
             >
               <option value="">Select...</option>
@@ -129,7 +217,9 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-dark w-100">Save</button>
+          <button type="submit" class="btn btn-outline-primary w-100">
+            Update
+          </button>
         </div>
       </form>
     </div>
