--- a/eAppointmentClient/src/app/components/patients/patients.component.html
+++ b/eAppointmentClient/src/app/components/patients/patients.component.html
@@ -43,6 +43,7 @@
         <tr>
           <th>#</th>
           <th>Full Name</th>
+          <th>Identity Number</th>
           <th>City / Town</th>
           <th>Full Address</th>
           <th>Operations</th>
@@ -53,6 +54,7 @@
         <tr>
           <td>{{ $index + 1 }}</td>
           <td>{{ patient.fullName }}</td>
+          <td>{{ patient.identityNumber }}</td>
           <td>{{ patient.city }} / {{ patient.town }}</td>
           <td>{{ patient.fullAddress }}</td>
           <td>
@@ -123,6 +125,20 @@
               class="form-control"
               required
               minlength="3"
+            />
+            <div class="invalid-feedback"></div>
+          </div>
+
+          <div class="form-group mt-2">
+            <label>Indetity Number</label>
+            <input
+              type="text"
+              [(ngModel)]="createModel.identityNumber"
+              name="identityNumber"
+              class="form-control"
+              required
+              minlength="11"
+              maxlength="11"
             />
             <div class="invalid-feedback"></div>
           </div>
@@ -216,6 +232,20 @@
               class="form-control"
               required
               minlength="3"
+            />
+            <div class="invalid-feedback"></div>
+          </div>
+
+          <div class="form-group mt-2">
+            <label>Indetity Number</label>
+            <input
+              type="text"
+              [(ngModel)]="updateModel.identityNumber"
+              name="updateIdentityNumber"
+              class="form-control"
+              required
+              minlength="11"
+              maxlength="11"
             />
             <div class="invalid-feedback"></div>
           </div>
