ui delete appointment by id

--- a/eAppointmentClient/src/app/components/home/home.component.html
+++ b/eAppointmentClient/src/app/components/home/home.component.html
@@ -53,6 +53,8 @@
       [endDayHour]="18"
       [showAllDayPanel]="false"
       (onAppointmentFormOpening)="onAppointmentFormOpening($event)"
+      (onAppointmentDeleted)="onAppointmentDeleted($event)"
+      (onAppointmentDeleting)="onAppointmentDeleting($event)"
     >
     </dx-scheduler>
   </div>
