appointment update ui

--- a/eAppointmentClient/src/app/components/home/home.component.html
+++ b/eAppointmentClient/src/app/components/home/home.component.html
@@ -55,6 +55,7 @@
       (onAppointmentFormOpening)="onAppointmentFormOpening($event)"
       (onAppointmentDeleted)="onAppointmentDeleted($event)"
       (onAppointmentDeleting)="onAppointmentDeleting($event)"
+      (onAppointmentUpdating)="onAppointmentUpdating($event)"
     >
     </dx-scheduler>
   </div>
