added users on navbar

--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -24,6 +24,11 @@
             >Patients</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/users" aria-current="page"
+            >Users</a
+          >
+        </li>
       </ul>
       <span class="me-2">Ataberk Kaya</span>
       <button class="btn btn-outline-danger" (click)="signOut()">
