--- a/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
+++ b/eAppointmentClient/src/app/components/layouts/navbar/navbar.component.html
@@ -24,13 +24,16 @@
             >Patients</a
           >
         </li>
+
+        @if(auth.tokenDecode.roles.includes("Admin")){
         <li class="nav-item">
           <a class="nav-link active" routerLink="/users" aria-current="page"
             >Users</a
           >
         </li>
+        }
       </ul>
-      <span class="me-2">Ataberk Kaya</span>
+      <span class="me-2">{{ auth.tokenDecode.name }}</span>
       <button class="btn btn-outline-danger" (click)="signOut()">
         <i class="fa-solid fa-power-off"></i>
       </button>
